--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "plyr": "^3.6.2",
     "vue": "^2.6.11",
     "vue-plyr": "^6.0.4",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
     "webtorrent": "^0.108.1"
   },
