--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "bitflix",
   "version": "1.0.0",
   "description": "Bitflix is an open source web application to watch movies using torrents in an easy way.",
-  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -27,6 +26,7 @@
   "homepage": "https://github.com/bitflix-official/Bitflix#readme",
   "dependencies": {
     "next": "^12.0.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
