--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bitflix is an open source web application to watch movies using torrents in an easy way.",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,12 +25,21 @@
   },
   "homepage": "https://github.com/bitflix-official/Bitflix#readme",
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^0.1.1",
+    "@radix-ui/react-icons": "^1.0.3",
+    "@radix-ui/react-popover": "^0.1.1",
+    "@radix-ui/react-tooltip": "^0.1.1",
+    "@supabase/supabase-js": "^1.28.0",
+    "kbar": "^0.1.0-beta.21",
     "next": "^12.0.4",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
