--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/bitflix-official/Bitflix#readme",
   "dependencies": {
+    "@radix-ui/react-context-menu": "^0.1.1",
     "@radix-ui/react-dropdown-menu": "^0.1.1",
     "@radix-ui/react-icons": "^1.0.3",
     "@radix-ui/react-popover": "^0.1.1",
