--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "@radix-ui/react-popover": "^0.1.1",
     "@radix-ui/react-tooltip": "^0.1.1",
     "@supabase/supabase-js": "^1.28.0",
+    "i18next": "^21.5.6",
     "kbar": "^0.1.0-beta.21",
     "next": "^12.0.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-toastify": "^8.1.0"
+    "react-i18next": "^11.14.3",
+    "react-toastify": "^8.1.0",
+    "video.js": "^6.7.3"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
