--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^8.1.0",
     "video.js": "^6.7.3"
   },
