--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next": "^21.5.6",
     "kbar": "^0.1.0-beta.21",
     "next": "^12.0.4",
+    "next-pwa": "^5.4.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -53,8 +54,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "express": "^4.17.2",
-    "next-offline": "^5.0.5",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19"
   }
